[DEV] ✨ Refactos + WIP on dev JobSvc preview
