# src/main/scala/api/routes/SessionRts.scala
@@ -2,6 +2,7 @@ package com.ilovedatajjia
 package api.routes
 
 import api.controllers.SessionCtrl
+import api.dto.output.SessionStatusDtoOut
 import api.models.SessionMod
 import api.routes.utils.Auth._
 import api.routes.utils.Response._
@@ -26,7 +27,12 @@ object SessionRts {
 
   // Define retrieve session status, terminate session & list all active sessions routes
   private val otherRoutes: AuthedRoutes[SessionMod, IO] = AuthedRoutes.of {
-    case GET -> Root / "status" as session                                   => Ok(SessionCtrl.renderSession(session))
+    case GET -> Root / "status" as session                                   =>
+      Ok(
+        SessionStatusDtoOut(session.id,
+                            session.createdAt.toString,
+                            session.updatedAt.toString,
+                            session.terminatedAt.map(_.toString)))
     case POST -> Root / "terminate" as session                               => SessionCtrl.terminateSession(session).toResponse
     case GET -> Root / "listing" :? StateQueryParamMatcher(state) as session =>
       SessionCtrl.listSessions(session, state).toResponse
